k8s/websocket.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket
  template:
    metadata:
      labels:
        app: websocket
    spec:
      containers:
        - name: websocket
          image: adarshanatia/trello_websocket:f7cf3f7eefa8f69aff9c5765be43fcdf6e2de968
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-svc
spec:
  selector:
    app: websocket
  ports:
    - port: 8080
      targetPort: 8080
